# ray-tracing-cuda

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.sh
cpu_openMP/: README.md  run_tests.sh  run_tests_single.sh  setup.sh
cpu_openMP/src/: main.cpp
multi-gpu/: README.md  setup.sh
openACC/: CMakeLists.txt  README.md  run_tests.sh  setup.sh
openACC/src/: main.cpp  utils.h
src/: aabb.cuh  main.cu  material.cuh  texture.cuh
